Добавил вторую активити

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DoubleTest</string>
+    <string name="square_activity">Square activity</string>
 </resources>
